// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`handles multiple internal schedules for the same timeframe 1`] = `
[
  {
    "isActive": false,
    "label": "Hours",
    "status": "10:30 AM — Noon",
  },
  {
    "isActive": true,
    "label": "Hours",
    "status": "1:00 PM — 3:00 PM",
  },
]
`;

exports[`handles multiple named schedules for the same timeframe 1`] = `
[
  {
    "isActive": false,
    "label": "Hours",
    "status": "10:30 AM — Noon",
  },
  {
    "isActive": false,
    "label": "Hours2",
    "status": "10:30 AM — Noon",
  },
  {
    "isActive": true,
    "label": "Hours2",
    "status": "1:00 PM — 3:00 PM",
  },
]
`;

exports[`returns false if none are available for this day 1`] = `
[
  {
    "isActive": false,
    "label": "Hours",
    "status": "Closed today",
  },
]
`;

exports[`returns false if none are open 1`] = `
[
  {
    "isActive": false,
    "label": "Hours",
    "status": "10:30 AM — 2:00 PM",
  },
]
`;
